/**
 * Copyright (c) 2022 Peking University and Peking University Institute for Computing and Digital Economy
 * SCOW is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *          http://license.coscl.org.cn/MulanPSL2
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
 * EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
 * MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */

syntax = "proto3";

package scow.portal;

enum EntryType {
  // 路径固定，不需要集群信息
  STATIC = 0;
  // 交互式应用
  APP = 1;
  SHELL = 2;
}

message Cluster {
  string id = 1;
  string name = 2;
}

message QuickEntry {
  string id = 1;
  string name = 2;
  string path = 3;
  EntryType entry_type = 4;
  optional bool need_cluster = 5;
  optional string icon = 6;
  optional string logo_path = 7;
  optional Cluster cluster = 8;
  optional string login_node = 9;
}

message GetQuickEntryRequest {
  string user_id = 1;
}

message GetQuickEntryResponse {
  repeated QuickEntry quick_entry = 1;
}

message SaveQuickEntryRequest {
  string user_id = 1;
  repeated QuickEntry quick_entry = 2;
}

message SaveQuickEntryResponse {
}

service UserService {
  rpc GetQuickEntry(GetQuickEntryRequest) returns (GetQuickEntryResponse);
  rpc SaveQuickEntry(SaveQuickEntryRequest) returns (SaveQuickEntryResponse);
}
